scan_dir/k8s/app_go/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go-app
  type: LoadBalancer
  ports:
    - port: 8070
