scan_dir/k8s/app_go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: go-ingress
  rules:
    - host: go.app
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: go-service
              port:
                number: 8070
